Added minitest to the list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <a id="the-latest-talk" class="anchor" href="#the-latest-talk" aria-hidden="true"><span class="octicon octicon-link"></span></a>The latest talk</h2>
 
 <ul>
+<li><a href="https://github.com/slashmili/talks/tree/master/2014/minitest-klxrb-oct">MiniTest @klxrb October 2014</a></li>
 <li><a href="https://github.com/slashmili/talks/tree/master/2015/elixir-klxrb-june">Elixir @klxrb June 2015</a></li>
 </ul>
 
